--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset = "UTF-8">
     <title>MS Digital Survey Form</title>
     <link rel = "stylesheet" type = "text/css" href = "main.css" />
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+      
     <!-- https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js
     https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css -->
   </head>
